🎨design: 농원소개 페이지 작업중

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script type="text/javascript"
+            src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=ihs2ydkr2n"></script>
   </body>
 </html>
